# CIO-Run-Auto-Orchestrator

./: .gitignore  README.md  api_contract.md  conftest.py  pyproject.toml
src/: __init__.py  api.py  config.py  engine_factory.py  event_bus.py  main.py  models.py  recovery.py  redis_client.py  scheduler.py  sse_utils.py  task_queue.py  worker.py  worker_locks.py
src/models/: __init__.py  api_schemas.py  config_schema.py  enums.py  task.py
src/task_queue/: __init__.py  queue.py  store.py
tests/: conftest.py  test_api.py  test_event_bus.py  test_models.py  test_recovery.py  test_scheduler.py  test_sse_utils.py  test_store.py  test_worker.py
