[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "auto_run_stream"
version = "0.3.0"
description = "CIO Run Auto Orchestrator — task scheduling layer over CIO-Agent"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # SSE support  (Phase 3)
    "sse-starlette>=2.1.0",

    # Redis async client  (Phase 2)
    "redis[hiredis]>=5.0.0",

    # Data validation
    "pydantic>=2.7.0",

    # HTTP client (used by uvicorn / starlette internally)
    "httpx>=0.27.0",
]

[project.scripts]
auto-run-stream = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
