[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cio-run-auto-orchestrator"
version = "0.6.1"
description = "Task scheduling layer over CIO-Agent API"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sse-starlette",
    "redis[asyncio]",
    "pydantic>=2.0",
]

[project.scripts]
cio-orchestrator = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
